@@ -29,6 +29,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "game.h"
 #include "ucmachine.h"
 
+using std::rand;
+using std::ostream;
+
 /*
  *	Delete all contents.
  */
